Create article/articles methods changed